package com.harry_potter.Personaje;

import com.harry_potter.Hechizos.Expelliarmus;

/** Personaje Ron Weasley: hábil inicialmente en Expelliarmus. */
public class RonWeasley extends Personaje {

    public RonWeasley() {
        super("Ron Weasley", new Expelliarmus());
    }
}
